feat(stocks): 股票历史数据回填第三轮修复F1